Add images to subpages

--- a/bosnia/index.html
+++ b/bosnia/index.html
@@ -2,27 +2,23 @@
 
 <!-- HTML Boilerplate -->
 <html lang="en">
-
-    <!-- Document Metadata -->
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../assets/css/reset.css" rel="stylesheet">
         <link href="../assets/css/style.css" rel="stylesheet">
-        <title>Croatia Travel Guide - Visit the Balkans</title>
+        <title>Bosnia Travel Guide - Visit the Balkans</title>
         <link rel="icon" href="../assets/images/map-balkans.png">
     </head>
-
-<!-- Document Body -->
 <body>
 
     <!-- Side Navigation -->
     <menu id="nav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <li><a href="../"><img src="../assets/images/map-balkans.png">Home</a></li>
-        <li><a href="index.html"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
-        <li><a href="../bosnia/"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
+        <li><a href="../croatia/"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
+        <li><a href="index.html"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
                 Herzegovina</a></li>
         <li><a href="../serbia/"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
         <li><a href="../montenegro/"><img src="../assets/images/ico-montenegro.png">Montenegro</a></li>
@@ -30,7 +26,7 @@
     </menu>
 
     <!-- Background Image -->
-    <div class="background-cover" style="background-image: url('images/hero-croatia.jpg');">
+    <div class="background-cover" style="background-image: url('images/hero-bosnia.jpg');">
 
         <!-- Inner Wrapper -->
         <div class="inner">
@@ -45,14 +41,14 @@
 
             <!-- Hero Section -->
             <section id="hero">
-                <img src="images/map-croatia.png" alt="Map of Croatia">
+                <img src="images/map-bosnia.png" alt="Map of Bosnia &amp; Herzegovina">
                 <article>
-                    <h1>Croatia</h1>
+                    <h1>Bosnia &amp; Herzegovina</h1>
                     <p>
-                        Croatia is a captivating country known for its stunning Adriatic coastline, historic cities, and diverse natural landscapes. With charming medieval towns, crystal-clear waters, and lush national parks, Croatia offers a perfect blend of culture, history, and natural beauty. 
+                        Bosnia and Herzegovina, nestled in the heart of the Balkans, is celebrated for its dramatic landscapes, complex history, and tasty ćevapi. It's known for its unique blend of Eastern and Western influences and is home to a significant Muslim population. 
                     </p>
                     <p>
-                        Visitors are drawn to its ancient architecture, vibrant local culture, and the idyllic islands that dot the coastline. Croatia is a destination that seamlessly combines rich heritage with breathtaking scenery, making it a must-visit for travellers seeking both relaxation and exploration.
+                        The country offers stunning natural beauty, historic cities like Sarajevo and Mostar, and a mix of traditions, including delicious cuisine and vibrant music. Bosnia has emerged as an authentic and captivating travel destination that reflects its diverse cultural tapestry.
                     </p>
                 </article>
             </section>
@@ -70,34 +66,34 @@
                 <h2>Popular Destinations</h2>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-dubrovnik.jpg">
+                        <img src="images/bosnia-sarajevo.jpg">
                     </figure>
                     <div>
-                        <h3>Dubrovnik</h3>
+                        <h3>Sarajevo</h3>
                         <p>
-                            Known as the "Pearl of the Adriatic," Dubrovnik is a historic coastal city renowned for its well-preserved medieval walls and stunning architecture. Visitors are drawn to its Old Town, a UNESCO World Heritage Site, where they can explore ancient streets, fortresses, and picturesque squares. The city also offers breathtaking views of the Adriatic Sea.
+                            The capital city is a unique blend of cultures and history. Visitors can explore its charming Old Town, witness the iconic Sebilj fountain, and learn about the city's complex past, including its role in the Bosnian War. Sarajevo is also known for its vibrant cafe culture and diverse culinary scene.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-split.jpg">
+                        <img src="images/hero-bosnia.jpg">
                     </figure>
                     <div>
-                        <h3>Split</h3>
+                        <h3>Mostar</h3>
                         <p>
-                            Split is another coastal gem with a fascinating blend of ancient and modern elements. Its centerpiece is the UNESCO-listed Diocletian's Palace, which serves as the old town's heart. This palace complex is now filled with shops, restaurants, and museums. Split's waterfront promenade, lined with cafes, is a popular spot for leisurely strolls.
+                            Famous for its iconic Old Bridge (Stari Most), Mostar is a picturesque city that reflects the country's Ottoman heritage. The bridge is a symbol of reconciliation, connecting the town's diverse communities. Tourists can explore the old bazaar, admire the stunning architecture, and witness traditional diving from the bridge.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-zagreb.jpg">
+                        <img src="images/bosnia-blagaj.jpg">
                     </figure>
                     <div>
-                        <h3>Zagreb</h3>
+                        <h3>Blagaj</h3>
                         <p>
-                            Croatia's capital, Zagreb, is a vibrant and culturally rich city. Explore the historic Upper Town (Gornji Grad), visit St. Mark's Church, and take a leisurely stroll through Tkalciceva Street. The city offers museums, art galleries, and a dynamic culinary scene.
+                            This hidden gem is home to the serene Blagaj Tekke, a 16th-century Dervish monastery situated at the base of a cliff beside the Buna River. It's a place of tranquility and natural beauty, offering a glimpse into Bosnia's spiritual and historical heritage.
                         </p>
                 </section>
             </div>
@@ -111,34 +107,34 @@
                 <h2>Cultural Highlights</h2>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-pula-arena.jpg">
+                        <img src="images/bosnia-multicultural.jpg">
                     </figure>
                     <div>
-                        <h3>An Italian Touch</h3>
+                        <h3>A Multicultural Metropolis</h3>
                         <p>
-                            Croatia's coastal regions, including Istria and Dalmatia, bear significant cultural influence from their Italian neighbours. This connection, dating back to Roman and Venetian times, is reflected in the architecture, cuisine, and heritage. Cities like Dubrovnik and Rovinj showcase Venetian Gothic and Renaissance styles, while the cuisine features Italian-inspired dishes, creating a distinctive blend of cultures.
+                            Sarajevo, often referred to as the "Jerusalem of Europe," is known for its diverse cultural heritage. Visitors can explore the historic neighbourhoods, churches, mosques, and synagogues that coexist in harmony. The city's multicultural fabric reflects its unique history.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-olive-oil.jpg">
+                        <img src="images/bosnia-coffee.jpg">
                     </figure>
                     <div>
-                        <h3>The Finest Olive Oil</h3>
+                        <h3>Sip, Savour &amp; Share</h3>
                         <p>
-                            Croatia boasts a long history of olive oil production, particularly in Istria and Dalmatia. Tourists can explore olive groves, visit family-owned olive oil mills, and sample high-quality olive oils. It's an enriching experience that connects travellers with local traditions and flavors.
+                            Coffee holds a special place in Bosnian culture. Tourists can savour traditional Bosnian coffee, a slow-brewed drink served in a džezva (small pot), often accompanied by Turkish delight. It's a symbol of hospitality and a delightful way to connect with locals.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-fjaka.jpg">
+                        <img src="images/bosnia-treasures.jpg">
                     </figure>
                     <div>
-                        <h3>Fjaka, the Art of Relaxation</h3>
+                        <h3>Artistic Treasures</h3>
                         <p>
-                            Croatians have a concept called "fjaka," which represents the art of pure relaxation. Locals fully embrace this state of mind, often found in coastal communities. Tourists can experience the joy of slowing down, savouring local cuisine, and enjoying the leisurely pace of life. It's an opportunity to disconnect and unwind in the heart of Croatia's relaxed beach culture.
+                            Bosnia and Herzegovina has a rich tradition of artisanal crafts and arts. The country is famous for its intricately woven carpets, copperware, and calligraphy. Exploring local markets and workshops offers an opportunity to appreciate these traditional crafts and perhaps acquire unique souvenirs.
                         </p>
                     </div>
                 </section>
@@ -153,42 +149,42 @@
                 <h2>Travel Tips</h2>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-beyond-coast.jpg">
+                        <img src="images/bosnia-customs.jpg">
                     </figure>
                     <div>
-                        <h3>Explore Beyond the Coast</h3>
+                        <h3>Respect Local Customs</h3>
                         <p>
-                            While Croatia's stunning coastline is a major attraction, don't miss the opportunity to explore the country's diverse inland regions. Discover historic cities like Zagreb and the breathtaking Plitvice Lakes National Park, known for its cascading waterfalls and emerald lakes.
+                            Bosnia and Herzegovina is a culturally diverse country with a mix of religions and traditions. When visiting religious sites or interacting with locals, it's essential to dress modestly and show respect for their customs and beliefs.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/hero-croatia.jpg">
+                        <img src="images/bosnia-cuisine.jpg">
                     </figure>
                     <div>
                         <h3>Sample Local Cuisine</h3>
                         <p>
-                            Croatian cuisine is a delightful fusion of Mediterranean and Central European flavours. Taste local specialties such as seafood dishes, truffle-infused meals in Istria, and pastries like "štrukli." Pair your meals with excellent Croatian wines and spirits.
+                            Explore the rich and flavourful Bosnian cuisine, including dishes like cevapi (grilled minced meat), burek (pastry with meat or cheese), and baklava. Don't miss the opportunity to savour traditional Bosnian coffee, a cultural delight.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-plan.jpg">
+                        <img src="images/bosnia-prayer.jpg">
                     </figure>
                     <div>
-                        <h3>Plan Ahead for Peak Season</h3>
+                        <h3>Respect Prayer Times</h3>
                         <p>
-                            Croatia can get crowded during the peak tourist season (summer). To make the most of your trip, book accommodations and popular tours in advance. Additionally, consider visiting during the shoulder seasons of late spring or early fall for a more relaxed experience.
+                            Bosnia has a significant Muslim population, and the call to prayer (Adhan) is an integral part of daily life. It's important to be mindful of prayer times, especially during Ramadan. Be considerate of those observing their religious duties, and avoid disrupting prayer sessions or gatherings in mosques.
                         </p>
                 </section>
             </div>
         </article>
     </main>
 
-    <!-- Background Image -->
-    <div class="background-cover" style="background-image: url('images/hero-croatia.jpg');">
+     <!-- Background Image -->
+    <div class="background-cover" style="background-image: url('images/hero-bosnia.jpg');">
 
         <!-- Inner Wrapper -->
         <div class="inner">
