--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <!-- HTML Boilerplate -->
 <html lang="en">
+
+    <!-- Document Metadata -->
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,11 +13,14 @@
         <title>Visit the Balkans</title>
         <link rel="icon" href="assets/images/map-balkans.png">
     </head>
+
+<!-- Document Body -->
 <body>
 
     <!-- Side Navigation -->
     <menu id="nav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <li><a href="index.html"><img src="assets/images/map-balkans.png">Home</a></li>
         <li><a href="croatia/"><img src="assets/images/ico-croatia.png">Croatia</a></li>
         <li><a href="bosnia/"><img src="assets/images/ico-bosnia.png">Bosnia &amp;
                 Herzegovina</a></li>
@@ -32,7 +37,7 @@
 
             <!-- Global Site Header -->
             <header id="banner">
-                <a href="/" id="logo">Visit the Balkans</a>
+                <a href="index.html" id="logo">Visit the Balkans</a>
                 <nav>
                     <button id="menu" onclick="openNav()">Menu</button>
                 </nav>
@@ -40,17 +45,15 @@
 
             <!-- Hero Section -->
             <section id="hero" class="home">
-                <div>
+                <article>
                     <h1>Adventure Awaits You</h1>
                     <p>
                         Ready to embark on this extraordinary adventure? Download our comprehensive brochure now and
                         start planning your dream getaway.
                     </p>
                     <a class="button button-primary" href="#">Download Brochure</a>
-                </div>
-                <figure>
-                    <img src="assets/images/map-balkans.png" alt="Map of the Balkans">
-                </figure>
+                </article>
+                <img src="assets/images/map-balkans.png" alt="Map of the Balkans">
             </section>
         </div>
     </div>
@@ -66,35 +69,35 @@
             <div class="row">
                 <a href="croatia/">
                     <article>
-                        <img src="assets/images/hero-croatia.jpg">
+                        <img src="croatia/images/hero-croatia.jpg">
                         <h3>Croatia</h3>
                         <p>Coastal gem with a Mediterranean charm.</p>
                     </article>
                 </a>
                 <a href="bosnia/">
                     <article>
-                        <img src="assets/images/hero-bosnia.jpg">
+                        <img src="bosnia/images/hero-bosnia.jpg">
                         <h3>Bosnia &amp; Herzegovina</h3>
                         <p>Timeless tales etched in nature.</p>
                     </article>
                 </a>
                 <a href="serbia/">
                     <article>
-                        <img src="assets/images/hero-serbia.jpg">
+                        <img src="serbia/images/hero-serbia.jpg">
                         <h3>Serbia</h3>
                         <p>A mix of cultures and vibrant urban life.</p>
                     </article>
                 </a>
                 <a href="montenegro/">
                     <article>
-                        <img src="assets/images/hero-montenegro.jpg">
+                        <img src="montenegro/images/hero-montenegro.jpg">
                         <h3>Montenegro</h3>
                         <p>Nature's masterpiece on the Adriatic.</p>
                     </article>
                 </a>
                 <a href="macedonia/">
                     <article>
-                        <img src="assets/images/hero-macedonia.jpg">
+                        <img src="macedonia/images/hero-macedonia.jpg">
                         <h3>North Macedonia</h3>
                         <p>A blend of cultures in scenic beauty.</p>
                     </article>
@@ -135,15 +138,14 @@
                         here. Don't miss out – download our brochure to get started!
                     </p>
                 </div>
-                <a class="button" href="#">
-                    Download Brochure
-                </a>
+                <a class="button" href="#">Download Brochure</a>
             </section>
         </div>
     </div>
 
     <!-- Footer -->
     <footer>Copyright &copy; Visit the Balkans 2023</footer>
+    
 </body>
 
 <!-- Sidebar Navigation Script -->
