--- a/macedonia/index.html
+++ b/macedonia/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../assets/css/reset.css" rel="stylesheet">
         <link href="../assets/css/style.css" rel="stylesheet">
-        <title>Croatia Travel Guide - Visit the Balkans</title>
+        <title>North Macedonia Travel Guide - Visit the Balkans</title>
         <link rel="icon" href="../assets/images/map-balkans.png">
     </head>
 
@@ -21,16 +21,16 @@
     <menu id="nav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <li><a href="../"><img src="../assets/images/map-balkans.png">Home</a></li>
-        <li><a href="index.html"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
+        <li><a href="../croatia/"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
         <li><a href="../bosnia/"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
                 Herzegovina</a></li>
         <li><a href="../serbia/"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
         <li><a href="../montenegro/"><img src="../assets/images/ico-montenegro.png">Montenegro</a></li>
-        <li><a href="../macedonia/"><img src="../assets/images/ico-macedonia.png">North Macedonia</a></li>
+        <li><a href="index.html"><img src="../assets/images/ico-macedonia.png">North Macedonia</a></li>
     </menu>
 
     <!-- Background Image -->
-    <div class="background-cover" style="background-image: url('images/hero-croatia.jpg');">
+    <div class="background-cover" style="background-image: url('images/hero-macedonia.jpg');">
 
         <!-- Inner Wrapper -->
         <div class="inner">
@@ -45,14 +45,14 @@
 
             <!-- Hero Section -->
             <section id="hero">
-                <img src="images/map-croatia.png" alt="Map of Croatia">
+                <img src="images/map-macedonia.png" alt="Map of Macedonia">
                 <article>
-                    <h1>Croatia</h1>
+                    <h1>North Macedonia</h1>
                     <p>
-                        Croatia is a captivating country known for its stunning Adriatic coastline, historic cities, and diverse natural landscapes. With charming medieval towns, crystal-clear waters, and lush national parks, Croatia offers a perfect blend of culture, history, and natural beauty. 
+                        North Macedonia, a hidden gem in the heart of the Balkans, is a land of captivating contrasts. This small country boasts a rich tapestry of history, culture, and natural beauty. The capital, Skopje, is a vibrant mix of modern and ancient, adorned with grand statues and historic architecture. 
                     </p>
                     <p>
-                        Visitors are drawn to its ancient architecture, vibrant local culture, and the idyllic islands that dot the coastline. Croatia is a destination that seamlessly combines rich heritage with breathtaking scenery, making it a must-visit for travellers seeking both relaxation and exploration.
+                        North Macedonia offers a journey through time, where Ottoman influences coexist with contemporary life, and where nature's wonders, like Mavrovo National Park, beckon explorers. Whether you seek history, tranquility, or outdoor adventures, North Macedonia delivers with warmth and authenticity.
                     </p>
                 </article>
             </section>
@@ -70,34 +70,34 @@
                 <h2>Popular Destinations</h2>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-dubrovnik.jpg">
+                        <img src="images/macedonia-skopje.jpg">
                     </figure>
                     <div>
-                        <h3>Dubrovnik</h3>
+                        <h3>Skopje</h3>
                         <p>
-                            Known as the "Pearl of the Adriatic," Dubrovnik is a historic coastal city renowned for its well-preserved medieval walls and stunning architecture. Visitors are drawn to its Old Town, a UNESCO World Heritage Site, where they can explore ancient streets, fortresses, and picturesque squares. The city also offers breathtaking views of the Adriatic Sea.
+                            The capital city, Skopje, is a vibrant hub with a mix of modern and historic attractions. Explore the Old Bazaar, admire the monumental statues and bridges, and visit cultural sites like the Kale Fortress and the Mother Teresa Memorial House.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-split.jpg">
+                        <img src="images/macedonia-ohrid.jpg">
                     </figure>
                     <div>
-                        <h3>Split</h3>
+                        <h3>Ohrid</h3>
                         <p>
-                            Split is another coastal gem with a fascinating blend of ancient and modern elements. Its centerpiece is the UNESCO-listed Diocletian's Palace, which serves as the old town's heart. This palace complex is now filled with shops, restaurants, and museums. Split's waterfront promenade, lined with cafes, is a popular spot for leisurely strolls.
+                            Ohrid is a UNESCO World Heritage site and a gem on the shores of Lake Ohrid. Its historic Old Town is home to medieval churches and monasteries, while the lake offers opportunities for swimming and boating. Ohrid is also known for its serene beaches.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-zagreb.jpg">
+                        <img src="images/macedonia-bitola.jpg">
                     </figure>
                     <div>
-                        <h3>Zagreb</h3>
+                        <h3>Bitola</h3>
                         <p>
-                            Croatia's capital, Zagreb, is a vibrant and culturally rich city. Explore the historic Upper Town (Gornji Grad), visit St. Mark's Church, and take a leisurely stroll through Tkalciceva Street. The city offers museums, art galleries, and a dynamic culinary scene.
+                            Known as the "City of Consuls," Bitola is famous for its charming Ottoman-era architecture and historic sites. Stroll along Sirok Sokak, visit the Heraclea Lyncestis archaeological site, and explore the old bazaars for a taste of local culture.
                         </p>
                 </section>
             </div>
@@ -111,34 +111,34 @@
                 <h2>Cultural Highlights</h2>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-pula-arena.jpg">
+                        <img src="images/macedonia-festivals.jpg">
                     </figure>
                     <div>
-                        <h3>An Italian Touch</h3>
+                        <h3>Cultural Festivals</h3>
                         <p>
-                            Croatia's coastal regions, including Istria and Dalmatia, bear significant cultural influence from their Italian neighbours. This connection, dating back to Roman and Venetian times, is reflected in the architecture, cuisine, and heritage. Cities like Dubrovnik and Rovinj showcase Venetian Gothic and Renaissance styles, while the cuisine features Italian-inspired dishes, creating a distinctive blend of cultures.
+                            North Macedonia hosts numerous cultural festivals that celebrate music, theatre, and the arts. The Ohrid Summer Festival is a renowned international event featuring classical music and ballet performances. Struga Poetry Evenings, one of the world's oldest poetry festivals, gathers poets and literary enthusiasts from around the globe.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-olive-oil.jpg">
+                        <img src="images/macedonia-carsija.jpg">
                     </figure>
                     <div>
-                        <h3>The Finest Olive Oil</h3>
+                        <h3>Čaršija Cultura</h3>
                         <p>
-                            Croatia boasts a long history of olive oil production, particularly in Istria and Dalmatia. Tourists can explore olive groves, visit family-owned olive oil mills, and sample high-quality olive oils. It's an enriching experience that connects travellers with local traditions and flavors.
+                            The čaršija is a traditional marketplace found in many North Macedonian towns. These lively marketplaces offer a unique blend of commerce and culture. Visitors can explore stalls selling everything from local produce to handmade crafts, providing an authentic cultural experience.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-fjaka.jpg">
+                        <img src="images/macedonia-handicraft.jpg">
                     </figure>
                     <div>
-                        <h3>Fjaka, the Art of Relaxation</h3>
+                        <h3>Handicraft &amp; Artisan Traditions</h3>
                         <p>
-                            Croatians have a concept called "fjaka," which represents the art of pure relaxation. Locals fully embrace this state of mind, often found in coastal communities. Tourists can experience the joy of slowing down, savouring local cuisine, and enjoying the leisurely pace of life. It's an opportunity to disconnect and unwind in the heart of Croatia's relaxed beach culture.
+                            Skilled artisans in North Macedonia create beautiful handicrafts, including intricate woodcarvings, pottery, textiles, and handwoven rugs. These crafts, passed down through generations, are not only functional but also pieces of art that represent the cultural heritage of different regions.
                         </p>
                     </div>
                 </section>
@@ -153,34 +153,34 @@
                 <h2>Travel Tips</h2>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-beyond-coast.jpg">
+                        <img src="images/macedonia-outdoor.jpg">
                     </figure>
                     <div>
-                        <h3>Explore Beyond the Coast</h3>
+                        <h3>Go on Outdoor Adventures</h3>
                         <p>
-                            While Croatia's stunning coastline is a major attraction, don't miss the opportunity to explore the country's diverse inland regions. Discover historic cities like Zagreb and the breathtaking Plitvice Lakes National Park, known for its cascading waterfalls and emerald lakes.
+                            North Macedonia offers a wide range of outdoor activities, from hiking and rock climbing in national parks to kayaking in pristine lakes. Be sure to explore the country's natural beauty by taking part in outdoor adventures that suit your interests and fitness level.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/hero-croatia.jpg">
+                        <img src="images/macedonia-festivals2.jpg">
+                    </figure>
+                    <div>
+                        <h3>Participate in Local Festivals</h3>
+                        <p>
+                            If your visit coincides with local festivals or events, consider participating. Whether it's celebrating Easter in Ohrid or attending cultural music festivals, joining in local festivities allows you to immerse yourself in Macedonian culture and create lasting memories.
+                        </p>
+                    </div>
+                </section>
+                <section class="row">
+                    <figure>
+                        <img src="images/macedonia-cuisine.jpg">
                     </figure>
                     <div>
                         <h3>Sample Local Cuisine</h3>
                         <p>
-                            Croatian cuisine is a delightful fusion of Mediterranean and Central European flavours. Taste local specialties such as seafood dishes, truffle-infused meals in Istria, and pastries like "štrukli." Pair your meals with excellent Croatian wines and spirits.
-                        </p>
-                    </div>
-                </section>
-                <section class="row">
-                    <figure>
-                        <img src="images/croatia-plan.jpg">
-                    </figure>
-                    <div>
-                        <h3>Plan Ahead for Peak Season</h3>
-                        <p>
-                            Croatia can get crowded during the peak tourist season (summer). To make the most of your trip, book accommodations and popular tours in advance. Additionally, consider visiting during the shoulder seasons of late spring or early fall for a more relaxed experience.
+                            Don't miss the opportunity to savour traditional Macedonian dishes. Try local specialties like "Tavče Gravče" (bean casserole), "Ajvar" (pepper-based condiment), and "Kebapčinja" (grilled sausages). Pair your meals with local wines and rakija (fruit brandy) for a complete culinary experience.
                         </p>
                 </section>
             </div>
@@ -188,7 +188,7 @@
     </main>
 
     <!-- Background Image -->
-    <div class="background-cover" style="background-image: url('images/hero-croatia.jpg');">
+    <div class="background-cover" style="background-image: url('images/hero-macedonia.jpg');">
 
         <!-- Inner Wrapper -->
         <div class="inner">
