--- a/montenegro/index.html
+++ b/montenegro/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../assets/css/reset.css" rel="stylesheet">
         <link href="../assets/css/style.css" rel="stylesheet">
-        <title>Croatia Travel Guide - Visit the Balkans</title>
+        <title>Montenegro Travel Guide - Visit the Balkans</title>
         <link rel="icon" href="../assets/images/map-balkans.png">
     </head>
 
@@ -21,16 +21,16 @@
     <menu id="nav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <li><a href="../"><img src="../assets/images/map-balkans.png">Home</a></li>
-        <li><a href="index.html"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
+        <li><a href="../croatia/"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
         <li><a href="../bosnia/"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
                 Herzegovina</a></li>
         <li><a href="../serbia/"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
-        <li><a href="../montenegro/"><img src="../assets/images/ico-montenegro.png">Montenegro</a></li>
+        <li><a href="index.html"><img src="../assets/images/ico-montenegro.png">Montenegro</a></li>
         <li><a href="../macedonia/"><img src="../assets/images/ico-macedonia.png">North Macedonia</a></li>
     </menu>
 
     <!-- Background Image -->
-    <div class="background-cover" style="background-image: url('images/hero-croatia.jpg');">
+    <div class="background-cover" style="background-image: url('images/hero-montenegro.jpg');">
 
         <!-- Inner Wrapper -->
         <div class="inner">
@@ -45,14 +45,14 @@
 
             <!-- Hero Section -->
             <section id="hero">
-                <img src="images/map-croatia.png" alt="Map of Croatia">
+                <img src="images/map-montenegro.png" alt="Map of Montenegro">
                 <article>
-                    <h1>Croatia</h1>
+                    <h1>Montenegro</h1>
                     <p>
-                        Croatia is a captivating country known for its stunning Adriatic coastline, historic cities, and diverse natural landscapes. With charming medieval towns, crystal-clear waters, and lush national parks, Croatia offers a perfect blend of culture, history, and natural beauty. 
+                        Montenegro is a small yet breathtaking country known for its diverse natural beauty. This coastal gem is nestled along the Adriatic Sea, offering an exquisite blend of picturesque beaches, historic towns, and rugged mountains. 
                     </p>
                     <p>
-                        Visitors are drawn to its ancient architecture, vibrant local culture, and the idyllic islands that dot the coastline. Croatia is a destination that seamlessly combines rich heritage with breathtaking scenery, making it a must-visit for travellers seeking both relaxation and exploration.
+                        Montenegro's historic towns, like Kotor and Budva, are renowned for their well-preserved medieval architecture, quaint cobbled streets, and vibrant nightlife. The nation's cultural heritage is reflected in its unique cuisine, combining Mediterranean and Balkan flavours, and its centuries-old traditions of folk music and dance.
                     </p>
                 </article>
             </section>
@@ -70,34 +70,34 @@
                 <h2>Popular Destinations</h2>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-dubrovnik.jpg">
+                        <img src="images/hero-montenegro.jpg">
                     </figure>
                     <div>
-                        <h3>Dubrovnik</h3>
+                        <h3>Kotor</h3>
                         <p>
-                            Known as the "Pearl of the Adriatic," Dubrovnik is a historic coastal city renowned for its well-preserved medieval walls and stunning architecture. Visitors are drawn to its Old Town, a UNESCO World Heritage Site, where they can explore ancient streets, fortresses, and picturesque squares. The city also offers breathtaking views of the Adriatic Sea.
+                            The UNESCO-listed town of Kotor is nestled at the base of towering mountains and boasts a stunning bay. Visitors can explore the well-preserved Old Town, walk along the ancient city walls for breathtaking views, and discover historic churches and museums.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-split.jpg">
+                        <img src="images/montenegro-cetinje.jpg">
                     </figure>
                     <div>
-                        <h3>Split</h3>
+                        <h3>Cetinje</h3>
                         <p>
-                            Split is another coastal gem with a fascinating blend of ancient and modern elements. Its centerpiece is the UNESCO-listed Diocletian's Palace, which serves as the old town's heart. This palace complex is now filled with shops, restaurants, and museums. Split's waterfront promenade, lined with cafes, is a popular spot for leisurely strolls.
+                            Cetinje, the historic capital of Montenegro, is rich in cultural heritage. Visitors can explore the Cetinje Monastery, home to a valuable collection of relics, and the National Museum of Montenegro, which houses significant art and historical exhibits. The city's cultural traditions, such as the annual "Cetinje Cultural Summer," also provide insight into Montenegrin life.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-zagreb.jpg">
+                        <img src="images/montenegro-podgorica.jpg">
                     </figure>
                     <div>
-                        <h3>Zagreb</h3>
+                        <h3>Podgorica</h3>
                         <p>
-                            Croatia's capital, Zagreb, is a vibrant and culturally rich city. Explore the historic Upper Town (Gornji Grad), visit St. Mark's Church, and take a leisurely stroll through Tkalciceva Street. The city offers museums, art galleries, and a dynamic culinary scene.
+                            As the capital city, Podgorica is Montenegro's political and administrative hub. Visitors can explore its historic sites, such as the Clock Tower and the Millennium Bridge. The city also offers parks and cultural institutions, providing insights into Montenegrin life.
                         </p>
                 </section>
             </div>
@@ -111,34 +111,34 @@
                 <h2>Cultural Highlights</h2>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-pula-arena.jpg">
+                        <img src="images/montenegro-venetian.jpg">
                     </figure>
                     <div>
-                        <h3>An Italian Touch</h3>
+                        <h3>Venetian Charm</h3>
                         <p>
-                            Croatia's coastal regions, including Istria and Dalmatia, bear significant cultural influence from their Italian neighbours. This connection, dating back to Roman and Venetian times, is reflected in the architecture, cuisine, and heritage. Cities like Dubrovnik and Rovinj showcase Venetian Gothic and Renaissance styles, while the cuisine features Italian-inspired dishes, creating a distinctive blend of cultures.
+                            Montenegro's history is intricately linked to the Republic of Venice, which left a lasting impact on its culture and architecture. The Venetian influence is evident in the charming coastal towns, architecture, and fortifications. Exploring the streets of Kotor, Herceg Novi, and Perast provides insights into this historical connection.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-olive-oil.jpg">
+                        <img src="images/montenegro-festivals.jpg">
                     </figure>
                     <div>
-                        <h3>The Finest Olive Oil</h3>
+                        <h3>Folk Festivals</h3>
                         <p>
-                            Croatia boasts a long history of olive oil production, particularly in Istria and Dalmatia. Tourists can explore olive groves, visit family-owned olive oil mills, and sample high-quality olive oils. It's an enriching experience that connects travellers with local traditions and flavors.
+                            Montenegro hosts a variety of folk festivals and cultural events throughout the year. These festivals feature traditional music, dance, and costumes. One of the most popular is the "Kotor Carnival," a lively event with colourful parades and elaborate costumes that reflect Montenegro's rich cultural heritage.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-fjaka.jpg">
+                        <img src="images/montenegro-traditions.jpg">
                     </figure>
                     <div>
-                        <h3>Fjaka, the Art of Relaxation</h3>
+                        <h3>Rural Traditions</h3>
                         <p>
-                            Croatians have a concept called "fjaka," which represents the art of pure relaxation. Locals fully embrace this state of mind, often found in coastal communities. Tourists can experience the joy of slowing down, savouring local cuisine, and enjoying the leisurely pace of life. It's an opportunity to disconnect and unwind in the heart of Croatia's relaxed beach culture.
+                            Many tourists are drawn to the charming rural villages of Montenegro. These areas offer a glimpse into the country's agricultural traditions, such as cheese and wine production. Visitors can participate in rural activities like grape harvesting or cheese-making, providing an authentic cultural experience.
                         </p>
                     </div>
                 </section>
@@ -153,34 +153,34 @@
                 <h2>Travel Tips</h2>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-beyond-coast.jpg">
+                        <img src="images/montenegro-travel.jpg">
                     </figure>
                     <div>
-                        <h3>Explore Beyond the Coast</h3>
+                        <h3>Travel Off the Beaten Path</h3>
                         <p>
-                            While Croatia's stunning coastline is a major attraction, don't miss the opportunity to explore the country's diverse inland regions. Discover historic cities like Zagreb and the breathtaking Plitvice Lakes National Park, known for its cascading waterfalls and emerald lakes.
+                            Montenegro is an outdoor enthusiast's paradise. If you enjoy activities like hiking, rafting, and zip-lining, take advantage of the country's stunning natural landscapes. Durmitor National Park, Tara River Canyon, and Biogradska Gora National Park offer excellent opportunities for outdoor adventures.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/hero-croatia.jpg">
+                        <img src="images/montenegro-explore.jpg">
+                    </figure>
+                    <div>
+                        <h3>Explore Coastal &amp; Mountain Areas</h3>
+                        <p>
+                            Montenegro offers diverse landscapes, from coastal towns to mountainous regions. Plan your itinerary to explore both aspects of the country, enjoying coastal towns like Kotor and Budva as well as natural wonders in places like Durmitor National Park.
+                        </p>
+                    </div>
+                </section>
+                <section class="row">
+                    <figure>
+                        <img src="images/montenegro-cuisine.jpg">
                     </figure>
                     <div>
                         <h3>Sample Local Cuisine</h3>
                         <p>
-                            Croatian cuisine is a delightful fusion of Mediterranean and Central European flavours. Taste local specialties such as seafood dishes, truffle-infused meals in Istria, and pastries like "štrukli." Pair your meals with excellent Croatian wines and spirits.
-                        </p>
-                    </div>
-                </section>
-                <section class="row">
-                    <figure>
-                        <img src="images/croatia-plan.jpg">
-                    </figure>
-                    <div>
-                        <h3>Plan Ahead for Peak Season</h3>
-                        <p>
-                            Croatia can get crowded during the peak tourist season (summer). To make the most of your trip, book accommodations and popular tours in advance. Additionally, consider visiting during the shoulder seasons of late spring or early fall for a more relaxed experience.
+                            Montenegrin cuisine is a delightful blend of Mediterranean and Balkan flavours. Local dishes often feature fresh seafood, olive oil, and an array of vegetables. Sampling traditional dishes like "njeguški pršut" (smoked ham) and "kastradina" (dried mutton) is a delicious way to explore the country's culinary heritage.
                         </p>
                 </section>
             </div>
@@ -188,7 +188,7 @@
     </main>
 
     <!-- Background Image -->
-    <div class="background-cover" style="background-image: url('images/hero-croatia.jpg');">
+    <div class="background-cover" style="background-image: url('images/hero-montenegro.jpg');">
 
         <!-- Inner Wrapper -->
         <div class="inner">
