--- a/serbia/index.html
+++ b/serbia/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../assets/css/reset.css" rel="stylesheet">
         <link href="../assets/css/style.css" rel="stylesheet">
-        <title>Croatia Travel Guide - Visit the Balkans</title>
+        <title>Serbia Travel Guide - Visit the Balkans</title>
         <link rel="icon" href="../assets/images/map-balkans.png">
     </head>
 
@@ -21,16 +21,16 @@
     <menu id="nav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <li><a href="../"><img src="../assets/images/map-balkans.png">Home</a></li>
-        <li><a href="index.html"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
+        <li><a href="../croatia/"><img src="../assets/images/ico-croatia.png">Croatia</a></li>
         <li><a href="../bosnia/"><img src="../assets/images/ico-bosnia.png">Bosnia &amp;
                 Herzegovina</a></li>
-        <li><a href="../serbia/"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
+        <li><a href="index.html"><img src="../assets/images/ico-serbia.png">Serbia</a></li>
         <li><a href="../montenegro/"><img src="../assets/images/ico-montenegro.png">Montenegro</a></li>
         <li><a href="../macedonia/"><img src="../assets/images/ico-macedonia.png">North Macedonia</a></li>
     </menu>
 
     <!-- Background Image -->
-    <div class="background-cover" style="background-image: url('images/hero-croatia.jpg');">
+    <div class="background-cover" style="background-image: url('images/hero-serbia.jpg');">
 
         <!-- Inner Wrapper -->
         <div class="inner">
@@ -45,14 +45,14 @@
 
             <!-- Hero Section -->
             <section id="hero">
-                <img src="images/map-croatia.png" alt="Map of Croatia">
+                <img src="images/map-serbia.png" alt="Map of Serbia">
                 <article>
-                    <h1>Croatia</h1>
+                    <h1>Serbia</h1>
                     <p>
-                        Croatia is a captivating country known for its stunning Adriatic coastline, historic cities, and diverse natural landscapes. With charming medieval towns, crystal-clear waters, and lush national parks, Croatia offers a perfect blend of culture, history, and natural beauty. 
+                        Serbia is a country of diverse landscapes, rich history, and vibrant culture. Its capital, Belgrade, is a bustling metropolis known for its dynamic nightlife and historic architecture. Beyond the capital, Serbia offers picturesque countryside, including the stunning Tara National Park and the fertile plains of Vojvodina. 
                     </p>
                     <p>
-                        Visitors are drawn to its ancient architecture, vibrant local culture, and the idyllic islands that dot the coastline. Croatia is a destination that seamlessly combines rich heritage with breathtaking scenery, making it a must-visit for travellers seeking both relaxation and exploration.
+                        The country's history is deeply intertwined with various civilisations, evident in its archaeological sites, monasteries, and fortresses. Serbia is renowned for its warm hospitality, traditional cuisine, and lively music festivals, making it an intriguing destination for travellers seeking both cultural exploration and natural beauty.
                     </p>
                 </article>
             </section>
@@ -70,34 +70,34 @@
                 <h2>Popular Destinations</h2>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-dubrovnik.jpg">
+                        <img src="images/serbia-belgrade.jpg">
                     </figure>
                     <div>
-                        <h3>Dubrovnik</h3>
+                        <h3>Belgrade</h3>
                         <p>
-                            Known as the "Pearl of the Adriatic," Dubrovnik is a historic coastal city renowned for its well-preserved medieval walls and stunning architecture. Visitors are drawn to its Old Town, a UNESCO World Heritage Site, where they can explore ancient streets, fortresses, and picturesque squares. The city also offers breathtaking views of the Adriatic Sea.
+                            The capital city, Belgrade, is a lively and cosmopolitan metropolis. Visitors can explore its historic districts, like Stari Grad (Old Town), visit the Belgrade Fortress, and enjoy the vibrant café culture. The city's nightlife is legendary, with numerous bars, clubs, and live music venues.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-split.jpg">
+                        <img src="images/serbia-novi-sad.jpg">
                     </figure>
                     <div>
-                        <h3>Split</h3>
+                        <h3>Novi Sad</h3>
                         <p>
-                            Split is another coastal gem with a fascinating blend of ancient and modern elements. Its centerpiece is the UNESCO-listed Diocletian's Palace, which serves as the old town's heart. This palace complex is now filled with shops, restaurants, and museums. Split's waterfront promenade, lined with cafes, is a popular spot for leisurely strolls.
+                            Novi Sad, located in the region of Vojvodina, is famous for its historic Petrovaradin Fortress and the annual EXIT music festival. The city is a cultural hub with a charming Old Town and a relaxed atmosphere. Strolling along the Danube River and exploring cultural events make Novi Sad a must-visit.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-zagreb.jpg">
+                        <img src="images/serbia-nis.jpg">
                     </figure>
                     <div>
-                        <h3>Zagreb</h3>
+                        <h3>Niš</h3>
                         <p>
-                            Croatia's capital, Zagreb, is a vibrant and culturally rich city. Explore the historic Upper Town (Gornji Grad), visit St. Mark's Church, and take a leisurely stroll through Tkalciceva Street. The city offers museums, art galleries, and a dynamic culinary scene.
+                            Niš is one of Serbia's oldest cities and is known for its historical significance. It's the birthplace of the Roman Emperor Constantine the Great and offers historical sites like Niš Fortress and the Skull Tower. The city also boasts delicious local cuisine and a lively atmosphere.
                         </p>
                 </section>
             </div>
@@ -111,34 +111,34 @@
                 <h2>Cultural Highlights</h2>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-pula-arena.jpg">
+                        <img src="images/serbia-cultural.jpg">
                     </figure>
                     <div>
-                        <h3>An Italian Touch</h3>
+                        <h3>Belgrade's Cultural Scene</h3>
                         <p>
-                            Croatia's coastal regions, including Istria and Dalmatia, bear significant cultural influence from their Italian neighbours. This connection, dating back to Roman and Venetian times, is reflected in the architecture, cuisine, and heritage. Cities like Dubrovnik and Rovinj showcase Venetian Gothic and Renaissance styles, while the cuisine features Italian-inspired dishes, creating a distinctive blend of cultures.
+                            Belgrade boasts a thriving cultural scene, with numerous theatres, museums, and art galleries. The Belgrade Philharmonic Orchestra, National Theatre, and Museum of Contemporary Art are cultural hubs that showcase the country's artistic heritage. The city's historic architecture, including Kalemegdan Fortress, reflects its rich history.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-olive-oil.jpg">
+                        <img src="images/serbia-vojvodina.jpg">
                     </figure>
                     <div>
-                        <h3>The Finest Olive Oil</h3>
+                        <h3>Cultures of Vojvodina</h3>
                         <p>
-                            Croatia boasts a long history of olive oil production, particularly in Istria and Dalmatia. Tourists can explore olive groves, visit family-owned olive oil mills, and sample high-quality olive oils. It's an enriching experience that connects travellers with local traditions and flavors.
+                            Vojvodina, a region in northern Serbia, is celebrated for its cultural diversity. It's home to various ethnic groups, including Serbs, Hungarians, and Slovaks, each contributing to the region's traditions and cuisine. The town of Subotica, with its Art Nouveau architecture, and Novi Sad, known for the Petrovaradin Fortress, reflect this multicultural heritage.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-fjaka.jpg">
+                        <img src="images/serbia-monastery.jpg">
                     </figure>
                     <div>
-                        <h3>Fjaka, the Art of Relaxation</h3>
+                        <h3>Orthodox Monasteries</h3>
                         <p>
-                            Croatians have a concept called "fjaka," which represents the art of pure relaxation. Locals fully embrace this state of mind, often found in coastal communities. Tourists can experience the joy of slowing down, savouring local cuisine, and enjoying the leisurely pace of life. It's an opportunity to disconnect and unwind in the heart of Croatia's relaxed beach culture.
+                            Serbia is home to a multitude of Orthodox monasteries, known for their stunning architecture, frescoes, and spiritual significance. The Studenica Monastery, a UNESCO World Heritage Site, and the Visoki Dečani Monastery are notable examples that offer insights into Serbian religious and artistic traditions.
                         </p>
                     </div>
                 </section>
@@ -153,34 +153,34 @@
                 <h2>Travel Tips</h2>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-beyond-coast.jpg">
+                        <img src="images/serbia-history.jpg">
                     </figure>
                     <div>
-                        <h3>Explore Beyond the Coast</h3>
+                        <h3>Brush Up on Your History</h3>
                         <p>
-                            While Croatia's stunning coastline is a major attraction, don't miss the opportunity to explore the country's diverse inland regions. Discover historic cities like Zagreb and the breathtaking Plitvice Lakes National Park, known for its cascading waterfalls and emerald lakes.
+                            Serbia has a complex history, and understanding it can greatly enrich your visit. Explore historical sites, such as the Belgrade Fortress and the House of Flowers, to learn about the country's past, including the Yugoslav era and more recent events.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/hero-croatia.jpg">
+                        <img src="images/serbia-transport.jpg">
                     </figure>
                     <div>
-                        <h3>Sample Local Cuisine</h3>
+                        <h3>Use Public Transportation</h3>
                         <p>
-                            Croatian cuisine is a delightful fusion of Mediterranean and Central European flavours. Taste local specialties such as seafood dishes, truffle-infused meals in Istria, and pastries like "štrukli." Pair your meals with excellent Croatian wines and spirits.
+                            Serbia has an extensive and affordable public transportation system, including trams and buses in cities. Using public transport can save you money and make it easier to explore various parts of the country. In Belgrade, the "BusPlus" card offers a convenient way to pay for rides.
                         </p>
                     </div>
                 </section>
                 <section class="row">
                     <figure>
-                        <img src="images/croatia-plan.jpg">
+                        <img src="images/serbia-explore.jpg">
                     </figure>
                     <div>
-                        <h3>Plan Ahead for Peak Season</h3>
+                        <h3>Explore Beyond Belgrade</h3>
                         <p>
-                            Croatia can get crowded during the peak tourist season (summer). To make the most of your trip, book accommodations and popular tours in advance. Additionally, consider visiting during the shoulder seasons of late spring or early fall for a more relaxed experience.
+                            While Belgrade is a vibrant and dynamic capital, Serbia offers diverse landscapes and attractions. Consider exploring historic towns like Novi Sad and Niš, the natural beauty of Tara National Park, and the unique ethnic village of Drvengrad. Serbia's diversity is best experienced by venturing beyond the capital.
                         </p>
                 </section>
             </div>
@@ -188,7 +188,7 @@
     </main>
 
     <!-- Background Image -->
-    <div class="background-cover" style="background-image: url('images/hero-croatia.jpg');">
+    <div class="background-cover" style="background-image: url('images/hero-serbia.jpg');">
 
         <!-- Inner Wrapper -->
         <div class="inner">
